--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
